--- a/templates/flood_predict.html
+++ b/templates/flood_predict.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Background and card styling */
         body {
@@ -136,7 +136,7 @@
             scroll-behavior: smooth;
         }
 
-    </style>
+    </style> --> 
 </head>
 <body>
     <div class="swiper-container">
