used a different model for improving accuracy for landslides

--- a/templates/prediction_summary.html
+++ b/templates/prediction_summary.html
@@ -269,6 +269,7 @@
                             <input type="hidden" name="location" value="{{location}}">
                             <input type="hidden" name="precipitation" value="{{flood_precipitation}}">
                             <input type="hidden" name="final_prediction" value="{{landslide_prediction}}">
+                            <input type="hidden" name="month" value="{{month}}">
                             <button type="submit" class="details-btn landslide-btn"> View Detailed landslide report </button>
                         </form>
                     </div>
