--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2208,3 +2208,25 @@ ul.tabs-nav .tab-nav.active {
 .makeblue {
     color: #189ad3;
 }
+.fade-in {
+    animation: fadeIn 1s ease-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.transparent-dark {
+    background-color: rgba(0, 0, 0, 0.45);
+    color: white;
+    padding: 20px;
+    border-radius: 15px;
+}
+
+html {
+    scroll-behavior: smooth;
+}
